Both shad barriers are gone, and Rite of Passage is initially open
Krys’kajo entrance doesnt require/change party members, or story progress. (still needs Drop and Bolt shade)

# Sapphire Ridge:

Old Dojo door only accessible with both key, and dojo quest started
You can invite Shizuka after fighting her in Old Hideout
Entrance to Rhombus Square now linked to Meteor Shade

# Keys / Dungeons / Expo Spaces:

No race tracking for dungeons
End cutscenes not tied to having party members
Thief Key and White Key fights entrance barrier not locked when you finish fight (but the exit still requires getting the new key chest for logic reasons)
Expo space maps not tied to plot.line but to dungeon completion
(plot.cold-dng-end, plot-heat-dng-end, plot-daft-frobbit-kill, plot.shock-dng-end, plot.wave-dng-end)

# Quests

Subsequent quests in factions, are now unlocked depending on shades, rather than dungeon / plot completion

==========================================================================================

## EXTRA PATCHES

You can activate these patches from the Randomizer menu in CCItemRandomizer, or through the .yaml settings in the CCMultiworldRandomizer

# Vermillion Tower Shade and Boss lock:

- A condition that locks Vermillion Tower entrance until you get all 4 element shades (Azure Drop, Purple Bolt, Blue Ice, and Red Flame Shades), and beaten the 4 element dungeons (Mine, Faj'ro, So'najiz and Zir'vitar). You can also make the condition only require the bosses, or the shades.

# Vermillion Tower floor skips:

- Enables all Tower floors once you finish the ground floor fight. This allows skipping the entirety of Vermillion Tower up to the last fight before the boss.

# Meteor Shade Wasteland:

- Locks Vermillion Wasteland Tunnel behind a Meteor Shade barrier.

# Open Faj'ro Temple:

- Enables a few extra passages on Upper Faj'ro Temple to make it less linear. This means most puzzles must be done in reverse order to access certain locations in reverse.